--- a/app/src/main/res/layout/fragment_carro.xml
+++ b/app/src/main/res/layout/fragment_carro.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:src="@drawable/fondoswitch" />
+            android:src="@drawable/fondo_registro" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvCarrito"
