--- a/app/src/main/res/layout/fragment_perfil_fragmento.xml
+++ b/app/src/main/res/layout/fragment_perfil_fragmento.xml
@@ -4,116 +4,140 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8F8F8"
+    android:background="@drawable/fondo_registro"
     android:orientation="vertical"
-    android:padding="24dp"
     tools:context=".Interfaces.Perfil">
 
-    <ImageView
-        android:id="@+id/imagenPerfil"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="32dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@mipmap/ic_launcher" />
-
-    <LinearLayout
-        android:id="@+id/llEmailPerfil"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="57dp"
+        app:cardElevation="100dp">
 
         <TextView
-            android:id="@+id/tvEmailAddressPerfil"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:id="@+id/tvPedidos"
+            android:layout_width="match_parent"
+            android:layout_height="59dp"
+            android:background="#E60012"
             android:gravity="center"
-            android:text="Correo Electrónico"
+            android:text="PERFIL"
+            android:textColor="#FFFFFF"
+            android:textSize="34sp"
+            android:textStyle="bold" />
+
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="24dp">
+
+        <ImageView
+            android:id="@+id/imagenPerfil"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="32dp"
+            android:src="@drawable/perfilpredefinido" />
+
+        <LinearLayout
+            android:id="@+id/llEmailPerfil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvEmailAddressPerfil"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Correo Electrónico"
+                android:textColor="#333333"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilNombrePerfil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:hint="Nombre de Usuario">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etNombrePerfil"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:textColor="#333333"
+                android:textSize="18sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilDireccionPerfil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:hint="Dirección Postal">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etDireccionPerfil"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:textColor="#333333"
+                android:textSize="18sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/switchNewsPerfil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Suscribirse al Newsletter"
             android:textColor="#333333"
             android:textSize="18sp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btcerrarSesionPerfil"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="24dp"
+            android:text="Cerrar Sesión"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            app:backgroundTint="#D32F2F"
+            app:cornerRadius="8dp"
+            app:iconGravity="textStart"
+            app:iconTint="#FFFFFF" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btmodificarPerfil"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
+            android:text="Modificar Datos"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            app:backgroundTint="#1976D2"
+            app:cornerRadius="8dp"
+            app:iconGravity="textStart"
+            app:iconTint="#FFFFFF" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btGuardarPerfil"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
+            android:text="Guardar Datos"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            app:backgroundTint="#1976D2"
+            app:cornerRadius="8dp"
+            app:iconGravity="textStart"
+            app:iconTint="#FFFFFF" />
     </LinearLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilNombrePerfil"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:hint="Nombre de Usuario">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etNombrePerfil"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:textColor="#333333"
-            android:textSize="18sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilDireccionPerfil"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="Dirección Postal">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etDireccionPerfil"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:textColor="#333333"
-            android:textSize="18sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.materialswitch.MaterialSwitch
-        android:id="@+id/switchNewsPerfil"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Suscribirse al Newsletter"
-        android:textColor="#333333"
-        android:textSize="18sp" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btcerrarSesionPerfil"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="24dp"
-        android:text="Cerrar Sesión"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:backgroundTint="#D32F2F"
-        app:cornerRadius="8dp"
-        app:iconGravity="textStart"
-        app:iconTint="#FFFFFF" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btmodificarPerfil"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        android:text="Modificar Datos"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:backgroundTint="#1976D2"
-        app:cornerRadius="8dp"
-        app:iconGravity="textStart"
-        app:iconTint="#FFFFFF" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btGuardarPerfil"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        android:text="Guardar Datos"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:backgroundTint="#1976D2"
-        app:cornerRadius="8dp"
-        app:iconGravity="textStart"
-        app:iconTint="#FFFFFF" />
 
 </LinearLayout>
