--- a/app/src/main/res/layout/tarjeta_producto_carrito.xml
+++ b/app/src/main/res/layout/tarjeta_producto_carrito.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="140dp"
     android:layout_marginHorizontal="10dp"
-    app:cardElevation="0dp">
+    android:layout_marginTop="10dp"
+    app:cardElevation="100dp">
 
     <LinearLayout
         android:layout_width="match_parent"
